Did some styling for chat page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @import "tailwindcss";
 
 @config "../tailwind.config.js";
+
+body {
+    width: 100vw;
+    height: 100vh;
+
+    overflow: hidden;
+}
