Word on account page UI

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,16 @@
 
 @config "../tailwind.config.js";
 
+@layer base {
+    h1 {
+        font-size: var(--text-2xl);
+    }
+
+    h2 {
+        font-size: var(--text-xl);
+    }
+}
+
 body {
     width: 100vw;
     height: 100vh;
