Made edit and delete buttons

--- a/styles/chat/components/messages.module.css
+++ b/styles/chat/components/messages.module.css
@@ -39,3 +39,12 @@
 .message:hover > * > .onHover {
     display: block;
 }
+
+.authorActions {
+    position: absolute;
+
+    z-index: 2;
+
+    top: 5px;
+    right: 5px;
+}
