Created Home page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,10 @@
 @config "../tailwind.config.js";
 
 @layer base {
+    h1, h2, h3, h4 {
+        font-weight: bold;
+    }
+    
     h1 {
         font-size: var(--text-2xl);
     }
@@ -10,11 +14,15 @@
     h2 {
         font-size: var(--text-xl);
     }
+
+    h3 {
+        font-size: var(--text-lg);
+    }
 }
 
 body {
     width: 100vw;
     height: 100vh;
 
-    overflow: hidden;
+    overflow-x: hidden;
 }
